--- a/web/lighttpd/fastcgi.conf
+++ b/web/lighttpd/fastcgi.conf
@@ -9,7 +9,7 @@ server.modules += ( "mod_fastcgi" )
 
 fastcgi.server = ( "/" =>
                    ((
-                     "socket" => "_socket_"
+                     "socket" => "__socket__",
                      "check-local" => "disable",
                      "bin-copy-environment" => (
                        "PATH", "SHELL", "USER"
