--- a/web/lighttpd/ssl.conf
+++ b/web/lighttpd/ssl.conf
@@ -1,11 +1,11 @@
-$SERVER["socket"] == ":8443" {
+$SERVER["socket"] == ":443" {
     ssl.engine = "enable"
-    ssl.pemfile = _certkeyfile_
+    ssl.pemfile = "__certkeyfile__"
     ssl.verifyclient.activate = "enable"
     ssl.verifyclient.enforce = "enable"
     ssl.verifyclient.depth = 100
     ssl.verifyclient.exportcert = "enable"
     ssl.verifyclient.username = "SSL_CLIENT_S_DN_CN"
-    ssl.ca-file = _cafile_
-    ssl.crl-file = _crlfile_
+    ssl.ca-file = "__cafile__"
+    ssl.crl-file = "__crlfile__"
 }
