redoing master fallback

--- a/web/lighttpd/fastcgi.conf
+++ b/web/lighttpd/fastcgi.conf
@@ -7,7 +7,7 @@
 ##
 server.modules += ( "mod_fastcgi" )
 
-$HTTP["url"] =~ "^/(web|data|css|js)" {
+$HTTP["url"] =~ "^/(web|data)" {
     fastcgi.server = ( "/" =>
                        ((
                          "socket" => "__socket__",
