--- a/mysql/grants.json.template
+++ b/mysql/grants.json.template
@@ -65,10 +65,11 @@
       ["INSERT, UPDATE, DELETE", "dynamo", "directory_cleaning_tasks"],
       ["INSERT, UPDATE, DELETE", "dynamo", "fts_servers"],
       ["INSERT, UPDATE, DELETE", "dynamo", "fts_error_messages"],
+      ["INSERT, UPDATE, DELETE", "dynamo", "fts_transfer_tasks"],
+      ["INSERT, UPDATE, DELETE", "dynamo", "fts_deletion_tasks"],
       ["INSERT, UPDATE, DELETE", "dynamo", "fts_transfer_batches"],
-      ["INSERT, UPDATE, DELETE", "dynamo", "fts_transfer_files"],
       ["INSERT, UPDATE, DELETE", "dynamo", "fts_deletion_batches"],
-      ["INSERT, UPDATE, DELETE", "dynamo", "fts_deletion_files"],
+      ["INSERT, UPDATE, DELETE", "dynamo", "fts_staging_queue"],
       ["INSERT, UPDATE, DELETE", "dynamo", "standalone_transfer_tasks"],
       ["INSERT, UPDATE, DELETE", "dynamo", "standalone_deletion_tasks"],
       ["INSERT, UPDATE, DELETE", "dynamo", "standalone_transfer_batches"],
