decoupling FOM into an executable

--- a/defaults.json.template
+++ b/defaults.json.template
@@ -28,16 +28,19 @@
         },
         "history": "dynamohistory"
       },
-      "transfer": {
-        "config": {
-          "db_params": {
-            "user": "dynamofod",
-            "db": "dynamo"
-          },
-          "batch_size": 200
-        },
-        "module": "standalone:StandaloneFileOperation"
-      }
+      "transfer": [
+        [
+          null,
+          "standalone:StandaloneFileOperation",
+          {
+            "db_params": {
+              "user": "dynamofod",
+              "db": "dynamo"
+            },
+            "batch_size": 200
+          }
+        ]
+      ]
     },
     "readonly": {
       "db": {
