First version of phedex like activity plots.

--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -2,6 +2,11 @@
   "detox": {
     "deletion_per_iteration": 0.01,
     "attrs": {
+      "FilePopularity": {
+        "namespaces": [
+          ["/cms/store/user/paus", "/store/user/paus"]
+        ]
+      }
     }
   },
   "log_level": "info"
