Rolling back to previous version.

--- a/config/dealer_config.json
+++ b/config/dealer_config.json
@@ -20,12 +20,7 @@
     },
     "attrs": {
     },
-    "history": {
-      "db_params": {
-        "db": "dynamohistory"
-      }
-    },
-    "target_sites": ["T3_US_MIT"],
+    "target_sites": [],
     "target_site_occupancy": 0.93,
     "max_site_pending_fraction": 0.03,
     "max_total_cycle_volume": 200
