or had to be a real function

--- a/mysql/grants.json.template
+++ b/mysql/grants.json.template
@@ -71,6 +71,7 @@
       ["INSERT, UPDATE, DELETE", "dynamo", "standalone_deletion_tasks"],
       ["INSERT, UPDATE, DELETE", "dynamo", "standalone_transfer_batches"],
       ["INSERT, UPDATE, DELETE", "dynamo", "standalone_deletion_batches"],
+      ["INSERT, UPDATE, DELETE", "dynamo", "unmanaged_deletions"],
       ["SELECT, LOCK TABLES", "dynamohistory"],
       ["INSERT, UPDATE", "dynamohistory", "files"],
       ["INSERT, UPDATE", "dynamohistory", "sites"],
